[smop] calling a simple c function which doesn't call back as a c routine works added test 39
git-svn-id: http://svn.pugscode.org/pugs@24175 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -208,6 +208,7 @@ foreach (test_file
     test/36_adhoc_signature.m0ld
     test/37_multisub.m0ld
     test/38_ritest.m0ld
+    test/39_pcl.c
 )
     set(c_file)
     if (test_file MATCHES "\\.sm0p$")
