--- a/misc/Syntax-Highlight-Perl6/META.yml
+++ b/misc/Syntax-Highlight-Perl6/META.yml
@@ -2,9 +2,9 @@
 name:                Perl6-Highlight
 version:             0.02
 abstract:            Perl6 Syntax Highlighter
-license:             Artistic License 2.0
+license:             artistic_2
 author:              
-    - Ahmad Zawawi <ahmad.zawawi@gmail.com>
+    - Ahmad M. Zawawi <ahmad.zawawi@gmail.com>
 generated_by:        ExtUtils::MakeMaker version 6.42
 distribution_type:   module
 requires:     
