[mildew] the last thing in a sub is returned removed clean from the default target
git-svn-id: http://svn.pugscode.org/pugs@24391 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/mildew/Makefile
+++ b/v6/mildew/Makefile
@@ -2,7 +2,7 @@
 
 PROVE := $(shell if prove --version | grep v2 > /dev/null 2>&1;then echo 'prove -r --perl'; else echo 'prove -r -e'; fi)
 
-test: clean prove
+test: prove
 
 prove:
 	$(PROVE) 'perl mildew --exec --file' t/
