[elf] Sync with r24080: anonymous subs now require a space after 'sub'.  STD_blue synced with STD.pm.
git-svn-id: http://svn.pugscode.org/pugs@24422 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elfish/STD_blue/Makefile
+++ b/misc/elfish/STD_blue/Makefile
@@ -14,10 +14,7 @@ does_gimme5_memory_problem_still_exist:
 	@echo No! Time to remove the work-around PrimitivesP5.pm mutant.
 
 known_working_STD:
-	# r24080 broke.
-	rm -rf lex
-	(cd ../../../src/perl6; svn up -r24067; make distclean; make)
-	# done.
+	make update_STD
 
 update_STD:
 	rm -rf lex
