--- a/misc/elfish/rx_on_re/Makefile
+++ b/misc/elfish/rx_on_re/Makefile
@@ -5,9 +5,13 @@ check:
 	@echo ok
 
 elfx::
-	../../elf/elf_h -x -o ./elfx -I ../../elf/elf_h_src -e 'use Elf_wo_main' ../STD_blue/IRx1_FromAST2.pm -e '$$*ast2ir_0=$$*ast2ir_1; $$*parser0=undef' ../STD_blue/Parser2.pm nodes.pm analysis.pm emit5.pm -e 'sub f is p5 {"eval(q{use remains_of_Regexp_ModuleA;})"};f();' -e elf_main
+	touch rx_prelude_p5.pm  # Assure it exists.
+	../../elf/elf_h -x -o ./elfx -I ../../elf/elf_h_src -e 'use Elf_wo_main' ../STD_blue/IRx1_FromAST2.pm -e '$$*ast2ir_0=$$*ast2ir_1; $$*parser0=undef' ../STD_blue/Parser2.pm nodes.pm analysis.pm emit5.pm -e 'sub f is p5 {"eval(q{use remains_of_Regexp_ModuleA;})"};f();' -e '_inline_p5("require \"rx_prelude_p5.pm\";")' -e elf_main
+	../../elf/elf_h rx_prelude_create.p6 > rx_prelude.pm
+	./elfx -o rx_prelude_p5.pm -s rx_prelude.pm
 
 check_blue:
+	-rm -rf lex  # Reset gimme5.
 	ELF_STD_BLUE_RUN=../STD_blue/STD_blue_run ./elfx test_blue.pm > tst_1 2> tst_2
 	diff t_baseline.result tst_1
 
