[smop] removed cmake-- support, scons is the default now
git-svn-id: http://svn.pugscode.org/pugs@24557 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/Makefile
+++ b/v6/smop/Makefile
@@ -1,9 +1,9 @@
 PROVE := $(shell if prove --version | grep v2 > /dev/null 2>&1;then echo 'prove -r --perl'; else echo 'prove -r -e'; fi)
 all:
-	mkdir build;cd build;cmake ..;MAKELEVEL=0 make
+	scons -Q
 .PHONY : test all
 test: all
-	$(PROVE) 'valgrind -q' build/test
+	LD_LIBRARY_PATH='.' $(PROVE) 'valgrind -q' build-tests
 env:
 	env
 
