[smop] added p5interpreterer.ri which is exposed in the lexical prelude as P5Interpreter which currently can only eval p5 code as strings the build system does nastyish stuff to link in libperl
git-svn-id: http://svn.pugscode.org/pugs@24580 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/Makefile
+++ b/v6/smop/Makefile
@@ -3,7 +3,7 @@ all:
 	scons -Q
 .PHONY : test all
 test: all
-	LD_LIBRARY_PATH='.' $(PROVE) 'valgrind -q' build-tests
+	LD_LIBRARY_PATH='build' $(PROVE) 'valgrind -q' build-tests
 env:
 	env
 
