[smop] small fix in makefile
git-svn-id: http://svn.pugscode.org/pugs@24583 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/Makefile
+++ b/v6/smop/Makefile
@@ -1,6 +1,6 @@
 PROVE := $(shell if prove --version | grep v2 > /dev/null 2>&1;then echo 'prove -r --perl'; else echo 'prove -r -e'; fi)
 all:
-	cd m0ld;ghc --make Setup.lhs;pwd;./Setup configure;pwd;./Setup build;cp dist/build/m0ld/m0ld m0ld_exe
+	(cd m0ld;ghc --make Setup.lhs;./Setup configure;./Setup build);cp m0ld/dist/build/m0ld/m0ld m0ld_exe
 	scons -Q
 .PHONY : test all
 test: all
