[mildew] initial support for CONTROL, the control is being set, but it is still not working...;
git-svn-id: http://svn.pugscode.org/pugs@24619 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/mildew/Makefile
+++ b/v6/mildew/Makefile
@@ -5,7 +5,7 @@ PROVE := $(shell if prove --version | grep v2 > /dev/null 2>&1;then echo 'prove 
 test: prove
 
 prove:
-	$(PROVE) 'perl mildew --exec --file' t/
+	$(PROVE) 'perl mildew ' t/
 
 clean:
 	rm -rf lex
