[smop] ccache now finds $HOME
git-svn-id: http://svn.pugscode.org/pugs@24721 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/SConstruct
+++ b/v6/smop/SConstruct
@@ -1,7 +1,8 @@
 import re
+import os
 BuildDir('build','src')
 BuildDir('build-tests','test')
-env = Environment()
+env = Environment(ENV = os.environ)
 
 # TODO windowsify
 
