elfblue now works with current STD.pm. [elf_h] Handle emit of infix ops with >2 arguments, in support of elfblue. [STD_red] Defer require()ing readline until a repl is (rarely) requested, simplifying non-debian install. [elfparse]  Drop nodes.pm (created by nodes_create.pl) from source control, to avoid a make gotcha.
git-svn-id: http://svn.pugscode.org/pugs@24932 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elfish/elfparse/Makefile
+++ b/misc/elfish/elfparse/Makefile
@@ -35,10 +35,8 @@ clean:
 # STD_blue
 
 known_working_STD:
-	# elfparse isn't quite working with STD head. 2009-Jan-16
-	### HEAD should currently be working.
-	### (cd ../../../src/perl6; svn up -rXXXXX; make distclean; make fast)
-	(cd ../../../src/perl6; svn up -r24775; make distclean; make)
+	# HEAD should currently be working.
+	### (cd ../../../src/perl6; svn up -r24775; make distclean; make fast)
 
 ${SRCP6}/STD.pmc: ${SRCP6}/STD.pm ${SRCP6}/gimme5
 	(cd ${SRCP6}; make fast)
